argo-stack/argo-workflow/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.mykubernetes.com`) && PathPrefix(`/argo`)
      kind: Rule
      services:
        - name: argo-server
          port: 2746
          scheme: https
          serversTransport: argo-insecure-transport
      middlewares:
        - name: argo-rewrite
        - name: argo-redirect
  tls:
    secretName: traefik-dashboard-cert
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argo-rewrite
  namespace: argo
spec:
  replacePathRegex:
    regex: "^/argo(/|$)(.*)"
    replacement: "/$2"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argo-redirect
  namespace: argo
spec:
  redirectScheme:
    scheme: https
    permanent: true
